# gin-tonic

./: .gitignore  Cargo.toml  LICENSE  README.md  perf.data  perf.data.old  profile.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
.woodpecker/: ci.yaml
core/: Cargo.toml  test.proto
core/src/: codec.rs  codegen.rs  decoder.rs  encoder.rs  error.rs  impls.rs  lib.rs  macros.rs  map.rs  message.rs  protobuf.rs  repeated.rs  scalars.rs  tag.rs  tests.rs  traits.rs  types.rs  wire_types.rs
core/src/codegen/: case.rs  enumeration.rs  external_type.rs  messages.rs  module.rs  one_of.rs  service.rs  test.rs  utils.rs
core/src/protobuf/: reader.rs  scalar.rs  tag.rs  test.rs  wire.rs
core/src/repeated/: packed.rs  unpacked.rs
core/src/scalars/: f64.rs  fixed64.rs  sfixed64.rs  sint64.rs  string.rs
core/src/tags/: mod.rs  reader.rs
core/src/types/: google.rs  ipv4addr.rs  secrecy.rs  uuid.rs
core/src/wire/: map.rs  mod.rs  nested.rs  scalars.rs  std_wire_impl.rs  test.rs  uuid.rs  varint.rs  wire_type.rs
derive/: Cargo.toml
derive/src/: ast.rs  codegen.rs  lib.rs
derive/src/codegen/: map.rs  messages.rs  oneof.rs  primitives.rs  utils.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/shared/: Cargo.toml  build.rs
examples/shared/proto/: example.proto
examples/shared/src/: example.rs  lib.rs
examples/shared/src/example/: echo_response.rs
gin/: Cargo.toml  test.proto
gin/benches/: gin_tonic.rs  prost.rs
gin/proto/: gin.proto
gin/src/: codec.rs  codegen.rs  impls.rs  lib.rs  protobuf.rs  test.rs  tests.rs  traits.rs
gin/src/codegen/: case.rs  ctx.rs  enums.rs  external_type.rs  messages.rs  module.rs  one_of.rs  service.rs  test.rs  utils.rs
gin/src/protobuf/: reader.rs  scalar.rs
proto/: Cargo.toml
proto/src/: decoder.rs  encoder.rs  error.rs  lib.rs  map.rs  message.rs  repeated.rs  traits.rs  wire_types.rs
proto/src/scalars/: bool.rs  bytes.rs  f32.rs  fixed32.rs  int32.rs  int64.rs  sfixed32.rs  sint32.rs  sint64.rs  uint32.rs  uint64.rs
