[workspace]
resolver = "2"
members = ["gin", "derive", "core"]

[workspace.dependencies]
bytes = "1.6.0"
darling = "0.20.9"
gin-tonic = "0.4.6"
gin-tonic-core = "0.4.6"
gin-tonic-derive = "0.4.6"
heck = "0.5.0"
integer-encoding = "4.0.0"
proc-macro2 = "1.0.85"
prost = "0.12.6"
protox = "0.6.1"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
thiserror = "1.0.61"
tonic = { version = "0.11.0", default-features = false, features = ["codegen"] }
tonic-build = "0.11.0"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }

[workspace.lints.rust]

[workspace.lints.clippy]
unwrap_used = "deny"
cast_possible_truncation = "warn"

[patch.crates-io]
gin-tonic = { path = "gin" }
gin-tonic-core = { path = "core" }
gin-tonic-derive = { path = "derive" }

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
