[package]
name = "gin-tonic-core"
version = "0.5.5"
edition = "2021"
repository = "https://github.com/cemoktra/gin-tonic/"
description = "core functions for gin-tonic"
license = "MIT"
readme = "../README.md"
keywords = ["grpc", "protobuf", "tonic"]

[features]
default = []
uuid_string = ["dep:uuid"]
uuid_bytes = ["dep:uuid"]

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
base64 = "0.22.1"

[lints]
workspace = true
