[package]
name = "gin-tonic-core"
version = "0.8.5"
edition = "2024"
repository = "https://codeberg.org/cemoktra/gin-tonic"
description = "core functions for gin-tonic"
license = "MIT"
readme = "../README.md"
keywords = ["grpc", "protobuf", "tonic"]

[features]
default = []
secrecy = ["dep:secrecy"]
uuid_string = ["dep:uuid"]
uuid_bytes = ["dep:uuid"]

[dependencies]
fxhash = { workspace = true }
secrecy = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true, optional = true }
varint-simd = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
