[package]
name = "gin-tonic-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cemoktra/gin-tonic/"
description = "derive macros for gin-tonic"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
