[package]
name = "gin-tonic-derive"
version = "0.5.6"
edition = "2021"
repository = "https://github.com/cemoktra/gin-tonic/"
description = "derive macros for gin-tonic"
license = "MIT"
readme = "../README.md"
keywords = ["grpc", "protobuf", "tonic"]

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
