[package]
name = "gin-tonic"
version = "0.5.4"
edition = "2021"
repository = "https://github.com/cemoktra/gin-tonic/"
description = "main gin-tonic crate - rust protobuf with gin and tonic"
license = "MIT"
readme = "../README.md"
keywords = ["grpc", "protobuf", "tonic"]

[features]
default = ["tonic"]
uuid_string = ["gin-tonic-core/uuid_string"]
uuid_bytes = ["gin-tonic-core/uuid_bytes"]
tonic = ["dep:tonic", "dep:tonic-build"]

[dependencies]
bytes = { workspace = true }
gin-tonic-core = { workspace = true }
gin-tonic-derive = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
protox = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tonic = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"
prost = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "gin_tonic"
harness = false

[[bench]]
name = "prost"
harness = false
