[workspace]

[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
tonic = { version = "0.14.5", features = ["channel"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4"] }
