[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
gin-tonic = { workspace = true, features = ["uuid_bytes"] }
tonic = { workspace = true, features = ["transport"] }
uuid = { workspace = true }

[build-dependencies]
gin-tonic = { workspace = true, features = ["uuid_bytes"] }
